k8s-manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cloudops-network-policy
  namespace: cloudops-prod
spec:
  podSelector:
    matchLabels:
      app: cloudops
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              component: frontend
      ports:
        - protocol: TCP
          port: 8000
